--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -39,6 +39,7 @@ flutter:
     - assets/TocoToucan.gif
     - assets/fox_face_mesh_texture.png
     - assets/arTarget1.jpg
+    - assets/earth.jpg
 #    - assets/prova_texture.png
 #    - assets/venom.jpg
 #    - assets/venom_with_eyes.jpg
