--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -7,10 +7,11 @@
     <!-- Indicates that app requires ARCore ("AR Required"). Ensures app is only
          visible in the Google Play Store on devices that support ARCore.
     -->
-    <uses-feature android:name="android.hardware.camera.ar"/>
+    <uses-feature android:name="android.hardware.camera.ar"
+        android:required="false" />
 
     <!-- Sceneform requires OpenGL ES 3.0 or later. -->
-    <uses-feature android:glEsVersion="0x00030000" android:required="true" />
+    <uses-feature android:glEsVersion="0x00030000" android:required="false" />
 
     <application>
         <!-- Indicates that app requires ARCore ("AR Required"). Causes Google
