--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -2,3 +2,4 @@ org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
 target-platform=android-arm64
+android.enableR8=true
