--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,7 @@ rootProject.allprojects {
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.google.ar.sceneform.plugin'
 //apply plugin: 'com.google.gms.google-services'
 
 android {
