--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,7 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.coroutines_ver = '1.3.2'
     repositories {
         google()
         jcenter()
@@ -67,6 +68,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_ver"
     api 'com.google.ar:core:1.14.0'
     api 'com.android.support:appcompat-v7:28.0.0'
     // Provides ArFragment, and other UX resources.
