--- a/android/opencv411/build.gradle
+++ b/android/opencv411/build.gradle
@@ -155,6 +155,8 @@ android {
     packagingOptions {
         exclude 'lib/arm64-v8a/libc++_shared.so'
         exclude 'lib/armeabi-v7a/libc++_shared.so'
+        exclude 'lib/x86/libc++_shared.so'
+        exclude 'lib/x86_64/libc++_shared.so'
     }
 }
 
